--- a/p-business-module/business-module-jian3/src/main/res/layout/include_title_noback.xml
+++ b/p-business-module/business-module-jian3/src/main/res/layout/include_title_noback.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="120px"
     android:background="?attr/colorPrimary"
-    app:layout_scrollFlags="scroll|enterAlways"
+    app:layout_scrollFlags="scroll"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
     <TextView
