--- a/p-business-module/business-module-j3new/src/main/res/layout/activity_gan.xml
+++ b/p-business-module/business-module-j3new/src/main/res/layout/activity_gan.xml
@@ -1,28 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ececec">
-
-    <FrameLayout
-        android:id="@+id/home_activity_frag_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
 
     <com.ashokvarma.bottomnavigation.BottomNavigationBar
         android:id="@+id/bottom_navigation_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_gravity="bottom" />
+
+    <FrameLayout
+        android:id="@+id/home_activity_frag_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottom_navigation_bar" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_home"
+        android:layout_above="@+id/bottom_navigation_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
+        android:layout_alignParentRight="true"
         android:layout_margin="16dp"
         android:src="@mipmap/ic_favorite_white_24dp"
         android:tint="#fff" />
 
-</android.support.design.widget.CoordinatorLayout>
+</RelativeLayout>
