--- a/p-business-module/business-module-j3new/src/main/res/layout/jian3_fragment_home.xml
+++ b/p-business-module/business-module-j3new/src/main/res/layout/jian3_fragment_home.xml
@@ -7,7 +7,7 @@
         android:id="@+id/swipeToLoadLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#e3e3e3">
+        android:background="#f3f3f3">
 
         <android.support.v7.widget.RecyclerView
             android:id="@id/swipe_target"
@@ -25,7 +25,7 @@
         <View
             android:id="@+id/fake_status_bar"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/statusbar_view_height"
+            android:layout_height="0dp"
             android:background="#00000000" />
 
         <FrameLayout
@@ -93,6 +93,7 @@
                     <ImageView
                         android:layout_width="15dp"
                         android:layout_height="15dp"
+                        android:visibility="gone"
                         android:layout_marginRight="5dp"
                         android:src="@mipmap/microphone" />
                 </LinearLayout>
